--- a/insta/templates/insta/home.html
+++ b/insta/templates/insta/home.html
@@ -14,10 +14,10 @@
                 <div>
                     <!-- user who posted his/her profile pic and name will appear here -->
                     <div id="prof-ring">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthefader-res.cloudinary.com%2Fprivate_images%2Fw_760%2Cc_limit%2Cf_auto%2Cq_auto%3Aeco%2F41860029_26m_RGB_web_e7nyxu%2Fariana-grande-cover-story.jpg&f=1&nofb=1"
+                        <img src="https://www.trzcacak.rs/myfile/detail/214-2143533_default-avatar-comments-default-avatar-icon-png.png"
                             id="prof-circle" alt="">
                     </div>
-                    <p id="mock-name">Lorem ipsum</p>
+                    <p id="mock-name">{{post.author}}</p>
 
                     <!-- MODAL -->
                     <a id="tmodal" type="button" data-toggle="modal" data-target="#exampleModalCenter">
@@ -78,7 +78,7 @@
                     <a href=""><img src="{% static "imapp/4.jpg" %}" id="llink" alt="image"></a>
                 </div>
                 <div id="maneno-card">
-                    <h5 class="card-title">authors name & title i.e "{{ post.title }}"</h5>
+                    <h5 class="card-title">{{ post.title }}</h5>
                     <small class="card-text text-muted">
                         {{ post.date_posted|date:"F d, Y" }}</small>
 
