--- a/insta/templates/nav.html
+++ b/insta/templates/nav.html
@@ -59,7 +59,7 @@
             <!-- right side links -->
             <div id="a">
                 {% if user.is_authenticated %}
-                <a href="{% url 'add_post' %}"> <img src="{% static "imapp/pen.jpg" %}" id="right-icon-a"
+                <a href="{% url 'create_post' %}"> <img src="{% static "imapp/pen.jpg" %}" id="right-icon-a"
                         alt="My image"></a>
                 <a href=""> <img src="{% static "imapp/b.jpg" %}" id="right-icons" alt="My image"> </a>
                 <a href="{% url 'profile' %}"> <img src="{% static "imapp/c.jpg" %}" id="right-icons" alt="My image">
