added a search form

--- a/insta/templates/nav.html
+++ b/insta/templates/nav.html
@@ -69,7 +69,8 @@
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {% endif %}
-
+                
+                <a href="{% url 'logout' %}"><img src="https://cdn.pixabay.com/photo/2017/01/02/21/42/power-off-1947949_960_720.png" id="logout" alt=""></a>
             </div>
         </nav>
         
