added some responsiveness in the auth sheets

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -50,7 +50,7 @@
                                             Cookies Policy </b>.</span>
                                 </div>
 
-                                <small class="text-center">Don't have an account? <a href="{% url 'login' %}">Sign up here</a></small>
+                                <small class="text-center">Already have an account? <a href="{% url 'login' %}">Sign up here</a></small>
 
                             </div>
                         </div>
