--- a/insta/templates/nav.html
+++ b/insta/templates/nav.html
@@ -55,7 +55,7 @@
         <nav>
             <!-- insta -->
             <a href="/"><img src="{% static "imapp/ins.jpg" %}" id="insta" alt="My image"></a>
-            
+
 
             <!-- right side links -->
             <div id="a">
@@ -69,16 +69,35 @@
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {% endif %}
-                
-                <a href="{% url 'logout' %}"><img src="https://cdn.pixabay.com/photo/2017/01/02/21/42/power-off-1947949_960_720.png" id="logout" alt=""></a>
+
+                <a href="{% url 'logout' %}"><img
+                        src="https://cdn.pixabay.com/photo/2017/01/02/21/42/power-off-1947949_960_720.png" id="logout"
+                        alt=""></a>
             </div>
         </nav>
-        
+
     </div>
-    <form class="form-inline" role='search' action="{% url 'search' %}" id="search">
-        <input type="text" class="form-control" placeholder="Search for posts" name="term">            
-        <button style="background-color:rgb(255, 255, 255)" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>            
-    </form>  
+    <form class="form-inline" role='search' action="{% url 'search' %}" id="search" id="search-form">
+        <input id="search-form" type="text" class="form-control" placeholder="Search for posts" name="term">
+        <button id="search-form" style="background-color:rgb(255, 255, 255)" type="submit"><i class="fa fa-search"
+                aria-hidden="true"></i></button>
+    </form>
+
+
+
+    <!-- navbar for small screen -->
+    <div>
+        <nav id=nav2>
+            <a href="{% url 'create_post' %}"> <img src="{% static "imapp/pen.jpg" %}" id="aa"
+                    alt="My image"></a>
+                    <a href="{% url 'logout' %}"><img
+                        src="https://cdn.pixabay.com/photo/2017/01/02/21/42/power-off-1947949_960_720.png" id="bb"
+                        alt=""></a>
+            <a href="{% url 'profile' %}"> <img src="{% static "imapp/c.jpg" %}" id="cc" alt="My image">
+        </nav>
+    </div>
+
+
 
 </body>
 
