--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     overflow-x: hidden !important;
 }
 
@@ -55,7 +55,7 @@ body{
     background-color: black;
     margin-top: 2.7px;
     margin-left: 3px;
-    /* margin-right: 50px; */
+
 }
 
 #prof-ring {
@@ -149,7 +149,7 @@ body{
 
 }
 
-
+/* 
 @media screen and (min-width: 310px) {
 
 
@@ -178,7 +178,7 @@ body{
     }
 
     #make-post {
-        /* height: 100vh; */
+
         width: 100%;
         background-color: rgba(0, 0, 0, 0.39);
     }
@@ -389,4 +389,328 @@ body{
 #logout{
     height: 35px;
     width: 35px;
+} */
+/*------------------------------------------------------------------------------- */
+
+
+@media screen and (min-width: 1496px) {
+    #nav2 {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 1495px) {
+    #post-hub {
+        overflow-x: hidden;
+        width: 100%;
+    }
+
+    #post-card {
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        left: 20%;
+    }
+
+    #right-pic {
+        display: none;
+    }
+
+    #thb {
+        display: none;
+    }
+
+    #search-form {
+        display: none;
+    }
+
+    #nav2 {
+        visibility: visible;
+        z-index: 999;
+        position: fixed !important;
+        bottom: 0;
+        border-top: 2px solid rgb(53, 51, 51);
+        width: 100% !important;
+        background-color: white;
+        padding: 5px;
+        
+    }
+
+    #aa,
+    #bb,
+    #cc {
+        position: relative;
+        width: 50px;
+        height: 40px;
+        margin-left: 150px;
+        left: 23%;
+        padding: 5px;
+    }
+}
+
+@media screen and (max-width: 1421px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 20%;
+    }
+}
+
+
+@media screen and (max-width: 1199px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 17%;
+    }
+}
+@media screen and (max-width: 1055px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 14%;
+    }
+}
+
+@media screen and (max-width: 989px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 15%;
+        padding: 2px;
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    #post-hub {
+        overflow-x: hidden;
+        width: 100%;
+    }
+
+    #post-card {
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        left: 20%;
+    }
+
+    #right-pic {
+        display: none;
+    }
+
+    #thb {
+        display: none;
+    }
+
+    #search-form {
+        display: none;
+    }
+
+    #nav2 {
+        /* visibility: visible;
+        z-index: 999;
+        position: fixed !important;
+        bottom: 0;
+        border-top: 2px solid rgb(53, 51, 51);
+        width: 100% !important;
+        background-color: white; */
+    }
+}
+
+
+
+@media screen and (max-width: 1119px) {
+    #thb {
+        display: none;
+    }
+
+    #search-form {
+        display: none;
+    }
+
+    /* visibe navbar on small screen */
+    #nav2 {
+        visibility: visible;
+        z-index: 999;
+        position: fixed;
+        bottom: 0;
+
+    }
+}
+
+@media screen and (max-width: 767px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 12%;
+    }
+
+    #post-card{
+        position: relative;
+        left: 0% !important;
+    }
+}
+
+@media screen and (max-width: 809px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 14%;
+    }
+
+
+}
+/* 
+@media screen and (max-width: 700px) {
+    #aa,
+    #bb,
+    #cc{
+        position: relative;
+        left: 10%;
+    }
+
+
+} */
+
+
+
+@media screen and (max-width: 415px) {
+    body {
+        overflow-x: hidden !important;
+    }
+
+    #post-card {
+        position: relative;
+        width: 25rem !important;
+
+        right: 40px;
+        overflow: hidden !important;
+    }
+
+
+    /* visibe navbar on small screen */
+    #nav2 {
+        visibility: visible;
+        z-index: 999;
+        position: fixed !important;
+        bottom: 0;
+        border-top: 2px solid rgb(53, 51, 51);
+        width: 100% !important;
+        background-color: white;
+    }
+
+    #aa,
+    #bb,
+    #cc {
+        position: relative;
+        width: 50px;
+        height: 40px;
+        margin: 30px;
+        left: 40px;
+    }
+
+    #bb {
+        width: 40px !important;
+    }
+
+
+    /* end of new navbar */
+
+
+    #st1 {
+        font-size: 2rem !important;
+    }
+
+    #right-pic {
+        display: none;
+    }
+
+    #dd {
+        position: relative;
+        display: flex !important;
+        padding: 17px;
+        right: 270px;
+    }
+
+    #btn-com {
+        font-size: 20px !important;
+    }
+
+    #mock-name {
+        /* position: relative; */
+        margin-left: 5%;
+    }
+}
+
+
+
+@media screen and (max-width: 360px) {
+    body {
+        overflow-x: hidden !important;
+    }
+
+    #post-card {
+        position: relative;
+        width: 38rem !important;
+
+        right: 37px;
+        overflow: hidden !important;
+    }
+
+    /* visibe navbar on small screen */
+    #nav2 {
+        visibility: visible;
+        z-index: 999;
+        position: fixed !important;
+        bottom: 0;
+        border-top: 2px solid rgb(53, 51, 51);
+        width: 100% !important;
+        background-color: white;
+    }
+
+    #aa,
+    #bb,
+    #cc {
+        position: relative;
+        width: 60px;
+        height: 50px;
+        margin: 30px;
+        left: 110px;
+    }
+
+    #bb {
+        width: 50px !important;
+    }
+
+
+    /* end of new navbar */
+
+    #st1 {
+        font-size: 2rem !important;
+    }
+
+    #right-pic {
+        display: none;
+    }
+
+    #dd {
+        position: relative;
+        display: flex !important;
+        padding: 17px;
+        right: 80px;
+    }
+
+    #btn-com {
+        font-size: 20px !important;
+    }
 }
